# control-panel

./: Cargo.toml  README.md  config.yml  shell.nix
.github/: dependabot.yml
src/: main.rs  models.rs  ui.rs  utils.rs  worker.rs
test-scripts/: frequent-logging.sh
