[package]
name = "control-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
ratatui = "0.30.0"
serde = { version = "1.0.227", features = [ "derive" ] }
serde_yaml = "0.9.34"
